Transitioning site from React to Jekyll

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,17 @@
 <footer class="footer">
 	<div class="container">
 		<section class="contact">
-			<h2>Contact</h2>
-			<a title="{{ site.email }}" href="mailto:{{ site.email }}">{{ site.email }}</a>
+			<h2> </h2>
+			<h5>I strive to craft elegant solutions to real problems, in a way that is both enjoyable to interact with and beautiful to look at. 
+				<br></br>
+				<em><a title="Resume" href="{{ site.baseurl | append: "/assets/ShirleyXiao_Resume.pdf" }}">View my resumé →</a></em>
+			</h5>
 		</section>
 		<section class="follow">
-			<h2>Follow</h2>
+			<h2>Contact</h2>
 			<ul>
+				<li><a title="Email" href="mailto:{{ site.email }}" target="_blank">stxiao@berkeley.edu</a></li>
 				<li><a title="LinkedIn" href="{{ site.linkedin }}" target="_blank">LinkedIn</a></li>
-				<li><a title="Twitter" href="{{ site.twitter }}" target="_blank">Twitter</a></li>
 				<li><a title="Github" href="{{ site.github }}" target="_blank">Github</a></li>
 			</ul>
 		</section>
