--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,10 @@
 <header class="header">
 	<div class="container">
-		<h1 class="logo">
-			<a title="{{ site.author }}" href="{{ site.baseurl | append: "/" }}">{{ site.author }}</a>
-		</h1>
+		<h2 class="logoleft">
+			<a title="Projects" href="{{ site.baseurl | append: "/projects" }}">PROJECTS</a>
+		</h2>
+		<h2 class="logoright">
+			<a title="About" href="{{ site.baseurl | append: "/about" }}">ABOUT</a>
+		</h2>
 	</div>
 </header>
