--- a/assets/scss/_core.scss
+++ b/assets/scss/_core.scss
@@ -5,7 +5,7 @@ html {
 body {
 	background: $color-white;
 	color: $color-black;
-	font-family: $font-poppins;
+	font-family: $font-sailec;
 	font-size: 1.8em;
 	line-height: 1.6;
 	font-weight: 600;
@@ -41,7 +41,38 @@ h3,
     font-size: 1.8rem;
     font-weight: 600;
     line-height: 1;
-    margin: 0;
+	margin: 0;
+}
+
+h4,
+.h4 {
+	color: $color-grey;
+	font-family: $font-sailec-light;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.5;
+    margin: 1.1;
+}
+
+h5,
+.h5 {
+	color: $color-black;
+	font-family: $font-sailec-light;
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 1.5;
+    margin: 1.1;
+}
+
+h6,
+.h6 {
+	background: lightpink;
+	color: $color-black;
+	font-family: $font-sailec;
+	font-size: 1.8em;
+	line-height: 1.6;
+	font-weight: 600;
+	-webkit-font-smoothing: antialiased;
 }
 
 p {
@@ -53,7 +84,20 @@ a {
 	text-decoration: none;
 }
 
+a:hover {
+	text-decoration: underline;
+	background-color: lightpink;
+}
+
+a.disabled, a.disabled:hover{
+	text-decoration: none;
+	background-color: transparent;
+}
+
 ul {
+	color: $color-grey;
+	font-size: 1.4rem;
+	font-family: $font-sailec;
 	margin: 0;
 	padding: 0;
 	list-style-type: none;	
@@ -168,3 +212,10 @@ blockquote {
 pre {
 	margin: 0 0 3rem;
 }
+
+mark {
+	display: inline-block;
+	line-height: 1.8em;
+	padding-bottom: 0em;
+	background: lightpink;
+  }
