removed /me from all urls

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header class="header">
 	<div class="container">
 		<h2 class="logoleft">
-			<a title="Projects" href="{{ site.baseurl | append: "/me/projects" }}">PROJECTS</a>
+			<a title="Projects" href="{{ site.baseurl | append: "/projects" }}">PROJECTS</a>
 		</h2>
 		<h2 class="logoright">
-			<a title="About" href="{{ site.baseurl | append: "/me/about" }}">ABOUT</a>
+			<a title="About" href="{{ site.baseurl | append: "/about" }}">ABOUT</a>
 		</h2>
 	</div>
 </header>
