--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -48,6 +48,16 @@
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@font-face {
+	font-family: "Sailec Bold";
+	src: url("61b43418b9624db49ba89da5d1b7eec8.eot"); /* IE9*/
+	src: url("61b43418b9624db49ba89da5d1b7eec8.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+	url("61b43418b9624db49ba89da5d1b7eec8.woff2") format("woff2"), /* chrome、firefox */
+	url("61b43418b9624db49ba89da5d1b7eec8.woff") format("woff"), /* chrome、firefox */
+	url("61b43418b9624db49ba89da5d1b7eec8.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+	url("61b43418b9624db49ba89da5d1b7eec8.svg#Sailec Bold") format("svg"); /* iOS 4.1- */
+  }
+
 /* latin */
 @font-face {
 	font-family: 'SailecLight';
