--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -44,9 +44,8 @@
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: 600;
-	src: local('Sailec Bold'), local('Sailec-Bold'), url("/assets/fonts/Sailec-Bold.woff2") format('woff2'),
-		url('/assets/fonts/Sailec-Bold.woff') format('woff'),
-		url('/assets/fonts/Sailec-Bold.ttf') format('truetype');
+	src: local('Sailec Bold'), local('Sailec-Bold'), 
+		url("/assets/fonts/Sailec-Bold.woff2") format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
