changed sailec in _variables

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -41,7 +41,7 @@
 
 /* latin */
 @font-face {
-	font-family: 'Sailec';
+	font-family: 'SailecBold';
 	font-style: normal;
 	font-weight: 600;
 	src: local('Sailec Bold'), local('Sailec-Bold'), 
