updated logo, about page, and featured projects setup

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,17 @@
 		<h2 class="logoleft">
 			<a title="Projects" href="{{ site.baseurl | append: "/projects" }}">PROJECTS</a>
 		</h2>
+		<a href="/" class="logocenter"><img src="/logo.png" alt="Shirley Xiao"></a>
 		<h2 class="logoright">
 			<a title="About" href="{{ site.baseurl | append: "/about" }}">ABOUT</a>
 		</h2>
 	</div>
+
+	<!-- <nav>
+        <a href="/projects">Projects</a>
+        <hr>
+        <a href="/" class="logo"><img src="/logo.svg" alt="Manuel Oppel del Rio"></a>
+        <hr>
+        <a href="/about">About&nbsp;Me</a>
+    </nav> -->
 </header>
