--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -11,12 +11,16 @@
 	<header class="header">
 		<div class="container">
 			<h2 class="logoleft">
-				<!-- <a title="Projects" href="{{ site.baseurl | append: "/projects" }}">PROJECTS</a> -->
+				<a title="Projects" href="{{ site.baseurl | append: "/projects" }}">Projects </a>
 			</h2>
 			<h2 class="logoright">
-				<!-- <a title="About" href="{{ site.baseurl | append: "/about" }}">ABOUT</a> -->
+				<a title="About" href="{{ site.baseurl | append: "/about" }}">ABOUT</a>
 			</h2>
 		</div>
+	</header>
+
+	<header class="header">
+
 	</header>
 	
 	<!-- {% include header.html %} -->
