--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -7,8 +7,8 @@
 }
 
 .header {
-	background: $color-white;
-	padding: 10rem 0;
+	background: #faf9f9;
+	padding: 8rem 0;
 }
 
 .logoleft {
@@ -17,6 +17,19 @@
 	font-weight: 600;
 	margin: 0;
 	line-height: 1;
+	// display: inline-block;
+}
+
+.logocenter {
+	display: block;
+	margin: 0 auto;
+	max-width: 10em;
+	@include clearfix;
+}
+
+.logocenter:hover {
+	text-decoration: none;
+	background-color: transparent;
 }
 
 .logoright {
@@ -25,6 +38,7 @@
 	font-weight: 600;
 	margin: 0;
 	line-height: 1;
+	// display: inline-block;
 }
 
 .nav {
@@ -37,7 +51,7 @@
 }
 
 .content {
-	background: $color-white;
+	background: #faf9f9;
 	padding: 7rem 0 0;
 	margin-bottom: 31.24rem;
 	position: relative;
@@ -51,6 +65,22 @@
 	}
 }
 
+.contentabout {
+	display: flex;
+	margin-bottom:3em;
+  }
+  
+  .contentabout img {
+	margin-right: 40px;
+	display: block;
+	height: 200%;
+    width: 300%;
+    overflow: hidden;
+  }
+  
+  .contentabout h4,
+  .contentabout p {margin-top: 1.3em;}
+
 .intro,
 .projects {
 	padding: 0 0 5rem;
@@ -60,7 +90,7 @@
 	@media (min-width: $breakpoint-medium) {
 		p {
 			font-size: 2.7rem;
-			max-width: 66.66666%;
+			max-width: 100%;
 		}
 	}
 }
@@ -354,7 +384,7 @@
 }
 
 .footer {
-	background: $color-alabaster;
+	background: #faf3ea;
 	bottom: 0;
 	left: 0;
 	padding: 5rem 0;
