--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -11,8 +11,9 @@
 	<header class="header">
 		<div class="container">
 			<h2 class="logoleft">
-				<a title="Projects" href="{{ site.baseurl | append: "/projects" }}">Projects </a>
+				<a title="Projects" href="{{ site.baseurl | append: "/projects" }}">PROJECTS</a>
 			</h2>
+			<a href="/" class="logocenter"><img src="/logo.png" alt="Shirley Xiao"></a>
 			<h2 class="logoright">
 				<a title="About" href="{{ site.baseurl | append: "/about" }}">ABOUT</a>
 			</h2>
