--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<section class="contact">
 			<h2> </h2>
-			<h5>I strive to craft elegant solutions to real problems, in a way that is both enjoyable to interact with and beautiful to look at. 
+			<h5>I am an avid creator, an excited learner, a very good sushi-eater
 				<br></br>
 				<em><a title="Resume" href="{{ site.baseurl | append: "/assets/ShirleyXiao_Resume.pdf" }}">View my resumé →</a></em>
 			</h5>
