--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<section class="contact">
 			<h2> </h2>
-			<h5>I am an avid creator, an excited learner, and a very good sushi-eater.
+			<h5>I like creating things, learning about the world, and eating sushi.
 				<br></br>
 				<em><a title="Resume" href="{{ site.baseurl | append: "/assets/ShirleyXiao_Resume.pdf" }}">View my resumé →</a></em>
 			</h5>
